promo panel mobile fix. title was overlapping

--- a/src/assets/toolkit/styles/6-components/_components.promo-panel.scss
+++ b/src/assets/toolkit/styles/6-components/_components.promo-panel.scss
@@ -190,6 +190,10 @@ $promo-max-width:   60em;
                         > div {
                             max-width: 100%;
 
+                            p {
+                                padding-top: 3.5em;
+                            }
+
                             .button {
                                 &:not(:first-child) {
                                     margin-top: 0.5rem;
